src/snapshots/tui_term__widget__tests__vttest_02_09.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "Push <RETURN>                                                                   ",
        "Jump scroll down region [12..13] size 2 Line 29                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 14, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
