src/snapshots/tui_term__widget__tests__vttest_02_11.snap
---
source: src/widget.rs
expression: view
---
"This line should be the one above the bottom of the screen. Push <RETURN>       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Origin mode test. This line should be at the bottom of the screen.              "

